--- a/package.json
+++ b/package.json
@@ -82,10 +82,12 @@
     "yamljs": "^0.2.3"
   },
   "devDependencies": {
+    "extend": "^2.0.1",
     "github": "^0.2.4",
     "gulp-concat-filenames": "0.0.3",
     "gulp-debug": "^2.0.1",
     "gulp-git": "^1.2.4",
+    "gulp-help": "^1.6.0",
     "gulp-tap": "^0.1.3",
     "merge-stream": "^0.1.7",
     "run-sequence": "^1.1.0"
